<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background_border"
    tools:context="${relativePackage}.${activityClass}" >

     
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/but1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dip"
        android:textColor="@color/whitesmoke"
        android:textStyle="italic"
        android:textSize="20sp"
        android:background="@layout/check_border"
        android:text="@string/but1"/>
   
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_time"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/time"
        android:layout_centerVertical="true"
        
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_time"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/page"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="@string/text" 
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_below="@+id/page"/>

    <Button
        android:id="@+id/but2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@layout/check_border"
        android:text="@string/but2" 
        android:textColor="@color/white"/>

</RelativeLayout>
