<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="${relativePackage}.${activityClass}" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
         
        <EditText 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seach"
            android:id="@+id/edit"
            android:background="@layout/background_border"/>

        <Button
            android:id="@+id/but1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sechbut" 
            android:layout_below="@+id/edit"
            android:background="@layout/background_border"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/but1"
            android:layout_centerHorizontal="false"
            android:text="@string/text"
            android:textColor="@color/blueviolet" />
    </RelativeLayout>

</ScrollView>
